# Design-patterns

./: .gitignore
Builder/: CMakeLists.txt
Builder/src/: Builder.hpp  Builder1.hpp  BuilderHTML.hpp  BuilderPizza.hpp  CodeBuilder.hpp  Person.cpp  Person.hpp  PersonAddressBuilder.hpp  PersonBuilder.cpp  PersonBuilder.hpp  PersonJobBuilder.hpp  main.cpp
Factories/: CMakeLists.txt
Factories/src/: DrinkFactory.hpp  FactoryPoint.hpp  HotDrink.hpp  HotDrinkFactory.hpp  main.cpp
Prototype/src/: RecordKeeping.hpp  main.cpp
Singleton/: CMakeLists.txt  Data.txt
Singleton/src/: SingletonDIInterface.hpp  SingletonDatabase.hpp  main.cpp
Solid-Design-Principle/: CMakeLists.txt  Readme.md
Solid-Design-Principle/src/: DependencyInversion.hpp  InterfaceSegregation.hpp  LiskovSubstitutionPrinciple.hpp  OpenClosedPrinciple.h  OpenClosedPrinciple.hpp  SingleResponsePrinciple.h  SingleResponsePrinciple.hpp  main.cpp
